; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_tmscsim.c_dc390_Going_append.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_tmscsim.c_dc390_Going_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc390_dcb = type { %struct.dc390_srb*, %struct.dc390_srb*, i32 }
%struct.dc390_srb = type { %struct.dc390_srb* }

@.str = private unnamed_addr constant [31 x i8] c"DC390: Append SRB %p to Going\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc390_dcb*, %struct.dc390_srb*)* @dc390_Going_append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dc390_Going_append(%struct.dc390_dcb* %0, %struct.dc390_srb* %1) #0 {
  %3 = alloca %struct.dc390_dcb*, align 8
  %4 = alloca %struct.dc390_srb*, align 8
  store %struct.dc390_dcb* %0, %struct.dc390_dcb** %3, align 8
  store %struct.dc390_srb* %1, %struct.dc390_srb** %4, align 8
  %5 = load %struct.dc390_dcb*, %struct.dc390_dcb** %3, align 8
  %6 = getelementptr inbounds %struct.dc390_dcb, %struct.dc390_dcb* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 8
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %6, align 8
  %9 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %10 = call i32 @printk(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), %struct.dc390_srb* %9)
  %11 = call i32 @DEBUG0(i32 %10)
  %12 = load %struct.dc390_dcb*, %struct.dc390_dcb** %3, align 8
  %13 = getelementptr inbounds %struct.dc390_dcb, %struct.dc390_dcb* %12, i32 0, i32 1
  %14 = load %struct.dc390_srb*, %struct.dc390_srb** %13, align 8
  %15 = icmp ne %struct.dc390_srb* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %18 = load %struct.dc390_dcb*, %struct.dc390_dcb** %3, align 8
  %19 = getelementptr inbounds %struct.dc390_dcb, %struct.dc390_dcb* %18, i32 0, i32 0
  %20 = load %struct.dc390_srb*, %struct.dc390_srb** %19, align 8
  %21 = getelementptr inbounds %struct.dc390_srb, %struct.dc390_srb* %20, i32 0, i32 0
  store %struct.dc390_srb* %17, %struct.dc390_srb** %21, align 8
  br label %26

22:                                               ; preds = %2
  %23 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %24 = load %struct.dc390_dcb*, %struct.dc390_dcb** %3, align 8
  %25 = getelementptr inbounds %struct.dc390_dcb, %struct.dc390_dcb* %24, i32 0, i32 1
  store %struct.dc390_srb* %23, %struct.dc390_srb** %25, align 8
  br label %26

26:                                               ; preds = %22, %16
  %27 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %28 = load %struct.dc390_dcb*, %struct.dc390_dcb** %3, align 8
  %29 = getelementptr inbounds %struct.dc390_dcb, %struct.dc390_dcb* %28, i32 0, i32 0
  store %struct.dc390_srb* %27, %struct.dc390_srb** %29, align 8
  %30 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %31 = getelementptr inbounds %struct.dc390_srb, %struct.dc390_srb* %30, i32 0, i32 0
  store %struct.dc390_srb* null, %struct.dc390_srb** %31, align 8
  ret void
}

declare dso_local i32 @DEBUG0(i32) #1

declare dso_local i32 @printk(i8*, %struct.dc390_srb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
